Make sure chat box is tall enough on mobile

--- a/src/styles/study/about.less
+++ b/src/styles/study/about.less
@@ -1,5 +1,6 @@
 @import '../variables/color.less';
 @import '../variables/typography.less';
+@import '../variables/buttons.less';
 
 section#about {
   .bigText() {
@@ -13,6 +14,10 @@ section#about {
     border-bottom: 1px dashed @color;
     font-style: normal;
     cursor: help;
+  }
+
+  a.download-button {
+    .buttonStyledLink(@accent-color-jade);
   }
 
   p {
