--- a/src/styles/study/live.less
+++ b/src/styles/study/live.less
@@ -14,6 +14,6 @@
   }
 
   .chat-container {
-    .responsive-height(16/4);
+    height: @grid * 33;
   }
 }
